--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  http: ^0.13.3
+  provider: ^5.0.0
+  json_annotation: ^4.1.0
+  carousel_slider: ^4.0.0
+  photo_view: ^0.12.0
+  get: ^4.3.6
+  shimmer: ^2.0.0
+  url_launcher: ^6.0.2
+  fluttertoast: ^8.0.8
+  timeago: ^3.1.0
+  intl: ^0.17.0
+
 
 dev_dependencies:
+  build_runner: ^2.1.1
+  json_serializable: ^5.0.0
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  meta: ^1.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
