--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: snosey_flutter_package
 description: Snosey Private Flutter Package.
-version: 0.9.4
+version: 0.9.6
 homepage: https://github.com/snosey/snosey_flutter_package
 
 environment:
@@ -10,26 +10,43 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  firebase_core_web: ^1.5.3
+  firebase_messaging_web: ^2.2.6
+  flutter_secure_storage_web: ^1.0.2
+  shared_preferences_web: ^2.0.3
+  url_launcher_web: ^2.0.6
+  cached_network_image: ^3.2.0
+  pdf: ^3.6.5
+  printing: ^5.6.6
+  flutter_native_splash: ^1.3.3
+  excel:
+    git:
+      url: "git@github.com:justkawal/excel.git"
+      ref: "null-safety"
   flutter_localizations:
     sdk: flutter
   http: ^0.13.4
   mime: ^1.0.1
   json_annotation: any
   carousel_slider: ^4.0.0
+  get_storage: ^2.0.3
+  flutter_typeahead: ^3.2.4
   flutter_secure_storage: ^5.0.2
-  shared_preferences: ^2.0.11
+  shared_preferences: ^2.0.12
   photo_view: ^0.13.0
   get: ^4.6.1
   flutter_local_notifications: ^9.2.0
   shimmer: ^2.0.0
   http_parser: ^4.0.0
-  url_launcher: ^6.0.17
+  url_launcher: ^6.0.18
   fluttertoast: ^8.0.8
   timeago: ^3.1.0
-  firebase_messaging: ^11.2.4
+  firebase_messaging: ^11.2.5
   dio: ^4.0.4
   intl: ^0.17.0
-  file_picker: ^4.3.0
+  file_picker: ^4.3.1
 
 
 
@@ -38,3 +55,4 @@ dev_dependencies:
   json_serializable: any
   flutter_test:
     sdk: flutter
+
