--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: snosey_flutter_package
 description: Snosey Private Flutter Package.
-version: 0.9.6
+version: 0.10.3
 homepage: https://github.com/snosey/snosey_flutter_package
 
 environment:
@@ -21,10 +21,7 @@ dependencies:
   pdf: ^3.6.5
   printing: ^5.6.6
   flutter_native_splash: ^1.3.3
-  excel:
-    git:
-      url: "git@github.com:justkawal/excel.git"
-      ref: "null-safety"
+  excel: ^2.0.0-null-safety-3
   flutter_localizations:
     sdk: flutter
   http: ^0.13.4
@@ -46,7 +43,7 @@ dependencies:
   firebase_messaging: ^11.2.5
   dio: ^4.0.4
   intl: ^0.17.0
-  file_picker: ^4.3.1
+  file_picker: ^4.3.2
 
 
 
