--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: snosey_flutter_package
-description: Snosey Private Flutter Package.
+name: dinnova
+description: Dinnova Private Flutter Package.
 version: 0.10.3
-homepage: https://github.com/snosey/snosey_flutter_package
+homepage: https://github.com/dinnova/dinnova
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,13 +12,14 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  firebase_core_web: ^1.5.3
-  firebase_messaging_web: ^2.2.6
-  flutter_secure_storage_web: ^1.0.2
-  shared_preferences_web: ^2.0.3
-  url_launcher_web: ^2.0.6
+#  firebase_core_web: ^1.5.3
+#  firebase_messaging_web: ^2.2.6
+#  flutter_secure_storage_web: ^1.0.2
+#  shared_preferences_web: ^2.0.3
+#  url_launcher_web: ^2.0.6
   cached_network_image: ^3.2.0
   pdf: ^3.6.5
+  path_provider: ^2.0.8
   printing: ^5.6.6
   flutter_native_splash: ^1.3.3
   excel: ^2.0.0-null-safety-3
